# fluxtual

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt  setup.py  theme.py
example/: demo.py  main.py
fluxtual/: __init__.py  app.py  color.py  context.py  enums.py  exceptions.py  inherited.py  theme.py  utils.py
fluxtual/widgets/: __init__.py  align.py  base.py  builder.py  expanded.py  flex.py  layouts.py  text.py
